# rules_rust_asan

./: BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel
src/: main.rs
